--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch
-torchvision
-numpy
-opencv-python
-pillow
+torch>=2.3.0,<=2.5.1
+torchvision>=0.18.0,<=0.20.1
+numpy>=1.26.4,<=2.1.3
+opencv-python>=4.8.1.78,<=4.10.0.84
+pillow>=10.4.0,<=11.0.0
